# bah-sheeple

./: .gitignore  Cargo.toml  requirements.txt  server.py
src/: config.rs  main.rs  oauth_client.rs  utils.rs
src/handlers/: auth.rs  tweets.rs
src/services/: mod.rs  openai.rs  twitter.rs
templates/: index.html  thank-you.html
