[package]
name = "bah-sheeple"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
oauth2 = "4.4.2"
anyhow = "1.0.9"
url = "2.5.2"
dotenv = "0.15.0"
percent-encoding = "2.3.1"
rand = "0.8.5"
serde = "1.0.211"
reqwest = "0.12.8"
serde_json = "1.0.132"
async-openai = "0.25.0"
tokio = "1.41.0"
